--- a/pom.xml
+++ b/pom.xml
@@ -38,13 +38,8 @@
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-cuda-10.0-platform</artifactId>
+            <artifactId>nd4j-native-platform</artifactId>
             <version>${nd4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.singlerr</groupId>
-            <artifactId>DiscordBot</artifactId>
-            <version>1.7</version>
         </dependency>
         <dependency>
             <groupId>org.deeplearning4j</groupId>
